--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,8 +1,150 @@
 * {
     margin: 0;
     padding: 0;
+    text-decoration: none;
+    list-style: none;
 }
 
 body {
     font-family: 'Open Sans', sans-serif;
+}
+
+:root {
+    --prim-c: #fafafa;
+    --sec-c: #220000;
+}
+
+nav {
+    position: fixed;
+    top: 0;
+    width: 100%;
+    overflow: hidden;
+    z-index: 1
+}
+
+nav ul {
+    display: flex;
+    align-items: flex-end;
+    justify-content: space-between;
+}
+
+nav ul li {
+    font-size: 2rem;
+}
+
+nav ul li a {
+    color: #fafafa;
+    transition: all 0.5s ease;
+}
+
+nav ul li a:hover {
+    cursor: pointer;
+    box-shadow: 0 5px 15px rgba(1, 1, 1, 0.5);
+    transition: all 0.5s ease;
+    border: 1px solid rgba(1, 1, 1, 0.25);
+    border-radius: 5px;
+    padding: 0.3rem;
+}
+
+.menu-nav-right {
+    color: #220000;
+    font-weight: 600;
+}
+
+/* main */
+
+.container {
+    display: flex;
+    width: 100%;
+    height: 100vh;
+}
+
+h1 {
+    background-image: url('../image/background-img.jpg');
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-clip: text;
+    -webkit-background-clip: text;
+    animation: right 1.4s ease forwards;
+    animation-delay: 0.3s;
+}
+
+@keyframes right {
+    0%{
+        background-position: -1000px;
+        left: 10%;
+        opacity: 0;
+    }
+    100% {
+        background-position: 0px;
+        left: 0%;
+        opacity: 1;
+    }
+}
+
+.left, 
+.right {
+    width: 50%;
+    position: relative;
+}
+
+.left {
+    background-image: url('../image/background-img.jpg');
+    background-position: top;
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+
+.left h1 {
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    opacity: 0;
+    transform: translate(-50%, -50%);
+    width: 70%;
+    text-align: center;
+    text-transform: uppercase;
+    color: var(--prim-c);
+    text-shadow: 2px 2px 5px var(--sec-c);
+    box-shadow: 0 5px 10px var(--prim-c);
+    padding: 24px 6px;
+    font-size: 3.5rem;
+    letter-spacing: .1rem;
+    font-weight: bold;
+    animation: left 2s ease forwards;
+    animation-delay: 0.3s;
+    transition: all .5s ease;
+}
+
+@keyframes left {
+    0%{
+        opacity: 0;
+        top: 60%;
+    }
+    100% {
+        opacity: 1;
+        top: 50%;
+    }
+}
+
+.left h1:hover {
+    cursor: pointer;
+    box-shadow: inset -10px 5px 100px var(--sec-c);
+}
+
+.right h1 {
+    position: absolute;
+    transform: translateY(-50%);
+    top: 50vh;
+    font-size: 8rem;
+    background-image: url('../image/background-img.jpg');
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-clip: text;
+    background-attachment: fixed;
+    color: transparent;
+    animation: right 2s ease forwards;
+    animation-delay: 0.3s;
 }
