--- a/CSS/style.css
+++ b/CSS/style.css
@@ -191,3 +191,133 @@ footer a {
 .social a:last-child:hover {
     color: #f80000;
 }
+
+@media (max-width: 1024px) {
+    .right h1 {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    nav ul {
+        justify-content: space-around;
+    }
+
+    footer {
+        justify-content: space-around;
+    }
+
+    footer a {
+        padding: 0 0.5rem;
+    }
+
+    @keyframes right {
+        0%{
+            background-position: -1000px;
+            left: 100%;
+            opacity: 0;
+        }
+        100% {
+            background-position: 0px;
+            left: 20%;
+            opacity: 1;
+        }
+    }
+}
+
+@media (max-width: 768px) {
+    .right h1 {
+        font-size: 6rem;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .nav ul {
+        justify-content: space-around;
+    }
+
+    footer {
+        justify-content: space-around;
+    }
+
+    footer a {
+        padding: 0 0.5rem;
+    }
+
+    @keyframes right {
+        0%{
+            background-position: -1000px;
+            left: 100%;
+            opacity: 0;
+        }
+        100% {
+            background-position: 0px;
+            left: 20%;
+            opacity: 1;
+        }
+    }
+}
+
+@media (max-width: 375px) {
+    nav ul {
+        justify-content: space-around;
+    }
+    nav li {
+        font-size: 1.5rem;
+    }
+    .left h1 {
+        position: relative;
+        font-size: 2rem;
+        width: 100%;
+    }
+    .right h1 {
+        font-size: 4.5rem;
+        top: 50%;
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+    }
+    .social {
+        display: flex;
+        flex-direction: column;
+        position: absolute;
+        bottom: 0;
+        right: 15%;
+    }
+    .social a {
+        padding: 1rem 0;
+    }
+    .copy {
+        position: absolute;
+        bottom: 0;
+        left: 10%;
+        padding-left: 0;
+        font-size: 1rem;
+    }
+
+    @keyframes right {
+        0%{
+            background-position: -1000px;
+            left: 100%;
+            opacity: 0;
+        }
+        100% {
+            background-position: 0px;
+            left: -65%;
+            opacity: 1;
+        }
+    }
+
+    @keyframes left {
+        0% {
+            opacity: 0;
+            top: 20%
+        }
+
+        100% {
+            opacity: 1;
+            top: 20%;
+            left: 100%
+        }
+    }
+}
